# claude-mission-control

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/cmc/: pricing.py
backend/cmc/alerts/: __init__.py  detector.py  nl_parser.py  scopes.py
backend/cmc/api/: __init__.py  sse.py
backend/cmc/api/routes/: __init__.py  alerts.py  context.py  cost.py  health.py  hitl.py  ingest.py  mcp.py  notifications.py  observability.py  schedules.py  sessions.py  skills.py  sync.py  system.py  tasks.py  views.py
backend/cmc/api/schemas/: __init__.py  alerts.py  common.py  context.py  cost.py  hitl.py  mcp.py  observability.py  schedules.py  sessions.py  skills.py  system.py  tasks.py  views.py
backend/cmc/app/: __init__.py  factory.py  lifespan.py  plist_render.py
backend/cmc/app/templates/: __init__.py  com.cmc.server.plist.j2
backend/cmc/auth/: __init__.py  dependencies.py  models.py  service.py
backend/cmc/cli/: __init__.py  doctor.py  setup_otel.py  setup_telegram.py
backend/cmc/config/: __init__.py  settings.py
backend/cmc/core/: __init__.py  errors.py  logging.py  paths.py  process.py  project_key.py  queue.py  static.py  time.py
backend/cmc/cost/: __init__.py  forecast.py
backend/cmc/db/: __init__.py  base.py  engine.py  health.py  session.py
backend/cmc/db/models/: __init__.py  activities.py  alert_rules.py  alert_state.py  decisions.py  inbox.py  live_state.py  mcp_stats.py  notification_log.py  otel_events.py  otel_metrics.py  pricing.py  saved_views.py  schedules.py  sessions.py  skills.py  system_state.py  tasks.py  token_usage.py  tools.py
backend/cmc/dispatcher/: __init__.py  _input_format_spike.py  alerts.py  answer_poll.py  autonomy_gate.py  claim.py  follow_ups.py  heartbeat.py  inbox_post.py  marker_parser.py  materialize.py  model_resolve.py  oneshot.py  plist_render.py  run_classic.py  run_stream.py  skill_router.py  state.py  sweep.py
backend/cmc/dispatcher/templates/: __init__.py  com.cmc.dispatcher.plist.j2
backend/cmc/ingest/: __init__.py  jsonl_parser.py  otel_parser.py  repository.py  scheduler.py
backend/cmc/mcp/: __init__.py  aggregator.py
backend/cmc/middleware/: __init__.py  body_size.py  proxy.py  rate_limit.py  request_id.py  request_logging.py  security_headers.py  timeout.py
backend/cmc/observability/: __init__.py  metrics.py  tracing.py
backend/cmc/readiness/: __init__.py  registry.py
backend/cmc/schedules/: __init__.py  cron.py  nlcron.py
backend/cmc/skills/: __init__.py  scanner.py
backend/cmc/tasks/: __init__.py  spawn.py  transitions.py
backend/cmc/telegram/: __init__.py  api.py  callback_verbs.py  dash_router.py  handler.py  messages.py  notifier.py  oneshot_handler.py  oneshot_notifier.py  plist_render.py
backend/cmc/telegram/templates/: __init__.py  com.cmc.telegram-handler.plist.j2  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_v1_1_alerts_and_skills.py  0003_project_key.py  0004_saved_views.py
backend/tests/: conftest.py  test_alerts_detector.py  test_alerts_dispatcher.py  test_alerts_metrics_contract.py  test_alerts_metrics_sync.py  test_alerts_nl_parser.py  test_alerts_router.py  test_alerts_scopes.py  test_alerts_telegram.py  test_attention_metrics.py  test_callback_verbs_round_trip.py  test_context_router.py  test_core_project_key.py  test_core_time.py  test_cost_forecast.py  test_cost_no_path_leakage.py  test_cost_router.py  test_dispatcher.py  test_doctor.py  test_emergency_stop.py  test_foundation_boot.py  test_hitl_router.py  test_ingest.py  test_mcp_router.py  test_migrations.py  test_observability_extensions.py  test_observability_router.py  test_otel_parser.py  test_phase13_e2e.py  test_phase1_boot.py  test_phase2_ingest.py  test_phase3_mcp.py  test_phase3_observability.py  test_phase3_sessions.py  test_phase3_skills.py  test_phase3_system.py  test_phase4_estop.py  test_phase4_hitl.py  test_phase4_schedules.py  test_phase4_tasks.py  (+22 more)
backend/tests/fixtures/: fake_claude_classic.py  fake_claude_stream.py
(+965 files in other folders)
