[project]
name = "cmc"
version = "0.1.0"
description = "Claude Mission Control — local dashboard for Claude Code"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "sqlalchemy==2.0.49",
  "sqlmodel==0.0.38",
  "aiosqlite==0.22.1",
  "alembic==1.18.4",
  "structlog==25.5.0",
  "greenlet>=3.0",
  "psutil==7.2.2",
  "croniter==6.2.2",
  "anthropic==0.97.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.28",
  "ruff>=0.9",
  "pytest-freezer>=0.4",   # Phase 2: deterministic time for INGST-05 local-day bucket tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
