[project]
name = "cmc"
version = "0.1.0"
description = "Claude Mission Control — local dashboard for Claude Code"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "sqlalchemy==2.0.49",
  "sqlmodel==0.0.38",
  "aiosqlite==0.22.1",
  "alembic==1.18.4",
  "structlog==25.5.0",
  "greenlet>=3.0",
  "psutil==7.2.2",
  "croniter==6.2.2",
  "anthropic==0.97.0",
  "httpx>=0.28",
  "prometheus-client>=0.25.0",
  "starlette-exporter>=0.23.0",
  "python-json-logger>=4.1.0",
  "pyjwt>=2.12.1",
  "cryptography>=47.0.0",
  "opentelemetry-api>=1.41.1",
  "opentelemetry-sdk>=1.41.1",
  "opentelemetry-exporter-otlp-proto-http>=1.41.1",
  "opentelemetry-instrumentation-fastapi>=0.62b1",
  "opentelemetry-instrumentation-httpx>=0.62b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.9",
  "pyright>=1.1.409",
  "pre-commit>=4.0",
  "pytest-cov>=7.1.0",
  "bandit>=1.9.4",
  "pip-audit>=2.10.0",
  "pytest-freezer>=0.4",   # Deterministic time for local-day bucket tests
]
redis = [
    "redis>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PERF", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/test_ingest.py" = ["E402"]
"tests/test_system_router.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["cmc"]
exclude = [
  "cmc/api",
  "cmc/db",
  "cmc/dispatcher",
  "cmc/ingest/repository.py",
  "cmc/pricing.py",
  "cmc/telegram",
  "migrations",
  "tests",
]
reportMissingTypeStubs = false
